# Projeto-Embedding-TC02

./: .dockerignore  .env.example  .gitignore  Dockerfile  MODEL_CARD.md  README.md  arquitetura.txt  docker-compose.yml  dvc.yaml  main.py  pyproject.toml
models/: recommender.pt
scripts/: download_data.py  entrypoint.sh  evaluate.py  feature_engineering.py  preprocess.py  register_model.py  train.py  validate_env.py
src/: config.py  settings.py  teste_setting.py
src/data/: preprocessors.py  preprocessors_dummy.py
src/models/: base.py  dummy.py  factory.py  mlp.py  mlp_dummy.py  trainer.py
