[project]
name = "projeto-embedding-tc02"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dvc>=3.67.1",
    "mlflow>=1.27.0",
    "numpy>=1.26.0,<2.5.0",
    "pandas>=3.0.3",
    "protobuf>=3.20,<4.0",
    "pydantic-settings>=2.14.2",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.9.0",
    "sqlalchemy>=1.4,<2.0",
    "torch>=2.12.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.20",
]

[tool.ruff]
line-length = 95
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N"]
# E = erros de estilo
# F = erros lógicos (variável não usada, import não usado)
# I = ordenação de imports
# N = naming conventions

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
